# sigvue-examples

./: .gitignore  MANIFEST.in  README.md  browser.toml  pyproject.toml
.github/workflows/: test.yml
scripts/: download_lte_sigmf.py  download_mit_bih_ecg.py  download_radio_astronomy.py  download_weather_radar.py  generate_lfm_collection.py  generate_minimal_sigmf.py  generate_segmented_results.py  generate_test_lte.py  get_all_data.sh  weather_radar_manifest.tsv
src/scientific_workspace_examples/: __init__.py  comms.py  events.py  lfm_live.py  lfm_pipeline.py  lfm_static.py  lfm_style.py  profile.py  radar_collection.py  sigmf.py  style.py  tones.py  waterfall.py
src/sigvue_examples/: __init__.py  capabilities.py  comms.py  events.py  memory.py  radar_collection.py  sigmf.py  waterfall.py
src/sigvue_examples/comms/: analysis.py  models.py  plots.py  presentation.py  workspace.py
src/sigvue_examples/ecg/: __init__.py  analysis.py  models.py  plots.py  presentation.py  workspace.py
src/sigvue_examples/events/: analysis.py  delivery.py  models.py  plots.py  presentation.py  source.py  workspace.py
src/sigvue_examples/plugins/nexrad/: __init__.py  delivery.py  models.py  reader.py  source.py
src/sigvue_examples/plugins/wfdb/: __init__.py  annotations.py  delivery.py  download.py  recording.py  source.py
src/sigvue_examples/radar/: analysis.py  capabilities.py  delivery.py  domain.py  layout.py  plots.py  presentation.py  sigmf_workspace.py  source.py  workspace.py
src/sigvue_examples/style/: plotly.py
src/sigvue_examples/waterfall/: analysis.py  batch.py  domain.py  matplotlib_plots.py  matplotlib_workspace.py  models.py  plots.py  presentation.py  scales.py  workspace.py
src/sigvue_examples/weather_radar/: __init__.py  analysis.py  models.py  plots.py  presentation.py  workspace.py
tests/: test_capabilities.py  test_download_scripts.py  test_ecg_download.py  test_lfm_generator.py  test_lfm_pipeline.py  test_minimal_examples.py  test_radar_collection.py  test_real_data_workspaces.py  test_waterfall.py  test_weather_radar.py  test_weather_radar_download.py  test_wfdb.py
