[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigvue-examples"
version = "0.1.0"
description = "File-backed SigMF examples for Sigvue"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["certifi>=2024.2.2", "numpy>=1.24", "plotly>=6.1.1", "scipy>=1.10", "sigvue>=0.1.0"]

[project.entry-points."sigvue.workspaces"]
digital-comms = "sigvue_examples.comms.workspace:create_workspace"
acoustic-events-segmented = "sigvue_examples.events.workspace:create_workspace"
waterfall = "sigvue_examples.waterfall.workspace:create_workspace"
lfm-live = "sigvue_examples.radar.workspace:create_workspace"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
