[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigvue-examples"
version = "0.3.0"
description = "File-backed scientific workspace examples for Sigvue"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2024.2.2",
    "numpy>=1.24",
    "plotly>=6.1.1",
    "scipy>=1.10",
    "sigvue>=2026.38",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "tomli>=2; python_version < '3.11'"]
release = ["build>=1.2", "twine>=5.0"]

[project.entry-points."sigvue.workspaces"]
digital-comms = "sigvue_examples.comms.workspace:create_workspace"
acoustic-events-segmented = "sigvue_examples.events.workspace:create_workspace"
waterfall = "sigvue_examples.waterfall.workspace:create_workspace"
lfm-sigmf = "sigvue_examples.radar.workspace:create_workspace"
mit-bih-ecg = "sigvue_examples.ecg.workspace:create_workspace"
weather-radar = "sigvue_examples.weather_radar.workspace:create_workspace"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
